...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:clipChildren="false">

    <FrameLayout
      android:id="@+id/dashboard_container"
      android:layout_width="match_parent"
      android:layout_height="@dimen/match_constraints"
      app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
      app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
...
